feat(C): add grade and place fields, grade filter, and value-scoring upgrade to recommendation-service